syntax = "proto3";

package api;

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/center/api";

import "lib/common/base.proto";
import "lib/types/taskdata.proto";
import "google/protobuf/empty.proto";
import "lib/center/api/metadata.proto";

message SaveTaskRequest {
  types.TaskPB task = 1;
}

message TaskListByIdentityRequest {
    string identity_id      = 1;
    uint64 last_updated = 2;
}

message TaskListRequest {
    uint64 last_updated = 1;
}

message TaskListResponse {
    repeated types.TaskPB tasks = 1;
}

message DetailTaskRequest {
    string task_id = 1;
}

message DetailTaskResponse {
    types.TaskPB tasks = 1;
}

message TaskEventRequest {
    string task_id = 1;
}

message TaskEventResponse {
  // 错误码，0 成功，1 异常
    int32 status = 1;
  // 错误信息
    string msg = 2;
  // 事件列表
    repeated types.TaskEvent task_events = 3;
}

// TaskService defines the interface to interact with the central data service.
service TaskService {

  // 存储任务
  rpc SaveTask(SaveTaskRequest) returns (api.protobuf.SimpleResponse);

  // 查询任务详情（任务ID、节点ID、参与方标识）
  rpc GetDetailTask(DetailTaskRequest) returns (DetailTaskResponse);

  // 查询任务列表
  rpc ListTask(TaskListRequest) returns (TaskListResponse);

  // 根据组织身份查询任务列表
  rpc ListTaskByIdentity(TaskListByIdentityRequest) returns (TaskListResponse);

  // 查询任务的事件列表
  rpc ListTaskEvent(TaskEventRequest) returns (TaskEventResponse);

}
